--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2817,7 +2817,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #003459;
 			color: #c8ece9;
 		}
 
@@ -3351,7 +3351,7 @@ input, select, textarea {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
+		background: darkgray;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
